add pop up login

--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@
                             <div class="usa-img"></div>
                             <div class="destinations__sign">USA</div>
                         </div>
-                        <div class="scroll-arrows">
-                            <object data="img/mobile/icons/arrow.svg" type="image/svg+xml" class="scroll-arrows__item">Your browser does not support SVG</object>
-                            <object data="img/mobile/icons/arrow active.svg" type="image/svg+xml" class="scroll-arrows__item scroll-arrows__item_active">Your browser does not support SVG</object>
-                        </div>
+                    </div>
+                    <div class="scroll-arrows">
+                        <object data="img/mobile/icons/arrow.svg" type="image/svg+xml" class="scroll-arrows__item scroll-arrows__item-left">Your browser does not support SVG</object>
+                        <object data="img/mobile/icons/arrow active.svg" type="image/svg+xml" class="scroll-arrows__item scroll-arrows__item_active scroll-arrows__item-right">Your browser does not support SVG</object>
                     </div>
                     <div class="scroll-block">
                         <div class="scroll-block__item"></div>           
