add pop up login

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="background-image">
         <header class="header">
             <div class="container">
+                
                 <div class="header__row">
                     <div class="header-logo">
                         <div class="header-logo__icon">
@@ -41,10 +42,11 @@
                             <li><a class="menu-link" data-goto=".destinations" href="#">Destinations</a></li>
                             <li><a class="menu-link" data-goto=".stories" href="#">Travel Stories</a></li>
                             <li><a class="menu-link" data-goto="" href="#">Account</a></li>
-                            <li><a class="menu-link" data-goto="" href="#">Social Media</a></li>
+                            <li><a class="menu-link" data-goto=".footer" href="#">Social Media</a></li>
                            </ul>
                         </nav>
                     </div>
+                    <div class="menu-overlay"></div>
                 </div>
             </div>
         </header>
@@ -124,7 +126,7 @@
                         <div class="scroll-block__item"></div>           
                     </div>
                     <div class="destinations__button">
-                        <button class="button destinations__button_arrow ">
+                        <button class="button">
                             Find More
                         </button>
                     </div>
@@ -195,6 +197,39 @@
                 <object data="img/icons/instagram.svg" type="image/svg+xml" class="networks__object">Your browser does not support SVG</object>
                 <object data="img/icons/youtube.svg" type="image/svg+xml" class="networks__object networks__object-changed">Your browser does not support SVG</object>
                 <object data="img/icons/twitter.svg" type="image/svg+xml" class="networks__object">Your browser does not support SVG</object>
+            </div>
+            <div class="login-pop-up">
+                <div class="login-pop-up__title">
+                    <h3>Log in to your account</h5>
+                </div>
+                <div class="sign-button ">
+                    <div class="sign-button__facebook">
+                        <button>Sign In with Facebook</button>
+                    </div>
+                </div>
+                <div class="sign-button">
+                    <div class="sign-button__google">
+                        <button>Sign In with Facebook</button>
+                    </div>
+                </div>
+                <div class="line">or</div>
+                <form action="#">
+                    <div class="form-field">E-mail</div>
+                    <input type="text" class="field">
+                    <div class="form-field">Password</div>
+                    <input type="text" class="field">
+                </form>
+                <div class="sign-button">
+                    <div class="sing-button__main">
+                        <button>Sing In</button>
+                    </div>
+                </div>
+                <div class="password-prompt">Forgot Your Password?</div>
+                <div class="solid-line"></div>
+                <div class="register">
+                    Don’t have an account? 
+                    <span>Register</span>
+                </div>
             </div>
         </div>
     </footer>
